--- a/linux/원격접속.md
+++ b/linux/원격접속.md
@@ -21,11 +21,11 @@
 
 ### 2. 리눅스 IP 확인 및 설정
 
-![리눅스 화면1](./img/20250422_225650.png)
+![리눅스 화면1](./img/원격접속img/20250422_225650.png)
 
 <br>
 
-![리눅스 화면2](./img/20250422_225729.png)
+![리눅스 화면2](./img/원격접속/20250422_225729.png)
 
 설정 완료 후 아래 명령어를 사용해 IP 확인:
 
@@ -36,21 +36,21 @@ ifconfig
 
 ### 3. PuTTY로 원격 리눅스 서버 접속
 
-![putty1](./img/1.png)
+![putty1](./img/원격접속img/1.png)
 
 <br>
 
-![putty2](./img/2.png)
+![putty2](./img/원격접속img/2.png)
 
 <br>
 
-![putty3](./img/3.png)
+![putty3](./img/원격접속img/3.png)
 
 ---
 
 ### 4. Ubuntu에 패키지 설치 및 SSH 데몬 실행
 
-![Ubuntu1](./img/4.png)
+![Ubuntu1](./img/원격접속img/4.png)
 
 ```bash
 sudo apt update
