--- a/linux/원격접속.md
+++ b/linux/원격접속.md
@@ -13,7 +13,7 @@
 
 ### 1. 접속을 위한 설정
 
-![원격 접속을 위한 VMWare 환경 설정](./img/20250422_225453.png)
+![원격 접속을 위한 VMWare 환경 설정](./img/원격접속img/20250422_225453.png)
 
 > 수동 IP를 잡기 위한 작업입니다.
 
