--- a/linux/1. 원격접속.md
+++ b/linux/1. 원격접속.md
@@ -25,7 +25,7 @@
 
 <br>
 
-![리눅스 화면2](./img/원격접속/20250422_225729.png)
+![리눅스 화면2](./img/원격접속img/20250422_225729.png)
 
 설정 완료 후 아래 명령어를 사용해 IP 확인:
 
