--- a/linux/4. 허가권.md
+++ b/linux/4. 허가권.md
@@ -1,4 +1,4 @@
-## 🔐 리눅스 권한 (Permissions)
+## 🔐 허가권 (Permissions)
 
 리눅스는 **소유자(user), 그룹(group), 기타(other)** 에 대해 **읽기(read), 쓰기(write), 실행(execute)** 권한을 부여할 수 있음.
 
