--- a/linux/3. 방화벽관리.md
+++ b/linux/3. 방화벽관리.md
@@ -10,7 +10,17 @@
 | 포트 열기        | `sudo ufw allow 22`              |
 | 포트 닫기        | `sudo ufw deny 22`               |
 | 포트 삭제        | `sudo ufw delete allow 22`       |
+### 방화벽 확인 
 ![우분투](./img/방화벽관리img/1.png)
+<br>
+
+### 방화벽 삭제 
+![우분투](./img/방화벽관리img/3.png)
+<br>
+
+### 방화벽 추가
+![우분투](./img/방화벽관리img/4.png)
+
 - **기본 포트 22**는 SSH 접속용 포트
 - `ufw`가 설치 안 되어 있다면:  
   `sudo apt install ufw`
