--- a/linux/5. 소유권.md
+++ b/linux/5. 소유권.md
@@ -61,4 +61,94 @@ sudo chown .samadal login.defs
 ---
 
 ## 🔗 참고
+## 🔒 권한 조합 테이블 (숫자 권한 → 권한 분포)
+
+| 권한 | 1 | 2 | 3 | 4 | 5 | | 1 | 2 | 3 | 4 | 5 | | 1 | 2 | 3 | 4 | 5 | | 1 | 2 | 3 | 4 | 5 |
+|------|---|---|---|---|---|--|---|---|---|---|---|--|---|---|---|---|---|--|---|---|---|---|---|
+| 755  | o | o | o | x | x |  | o | o | o |   |   |  | o | o | o | o | o |  | o | o | o | o | o |
+| 570  | o | o | x | x | x |  | o | o | o | o |   |  | o | o | o |   |   |  | o | o | o |   |   |
+| 375  | o | o | o | x | x |  | o | o | o | o | o |  | o | o | o | o | o |  | o | o | o | o | o |
+| 455  | o | o | o | x | x |  | o | o | o |   |   |  | o | o |   |   |   |  | o | o |   |   |   |
+| 001  | o | o | o | x | x |  | o | o |   |   |   |  | o | o |   |   |   |  | o | o |   |   |   |
+| 010  | o | o | x | x | x |  | o | o | o |   |   |  | o | o |   |   |   |  | o | o |   |   |   |
+| 273  | o | o | o | o | o |  | o | o | o | o | o |  | o | o |   |   |   |  | o | o |   |   |   |
+| 135  | o | o | o | x | x |  | o | o | o | o | o |  | o | o | o |   |   |  | o | o | o |   |   |
+| 705  | o | o | o | x | x |  | o | o |   |   |   |  | o | o | o | o | o |  | o | o | o | o | o |
+| 507  | o | o | o | o | o |  | o | o |   |   |   |  | o | o | o |   |   |  | o | o | o |   |   |
+| 316  | o | o | x | x | x |  | o | o | o |   |   |  | o | o | o | o |   |  | o | o | o | o |   |
+| 770  | o | o | x | x | x |  | o | o | o | o |   |  | o | o | o | o |   |  | o | o | o | o |   |
+| 644  | o | o | x | x | x |  | o | o |   |   |   |  | o | o |   |   |   |  | o | o |   |   |   |
+| 027  | o | o | o | o | o |  | o | o |   |   |   |  | o | o |   |   |   |  | o | o |   |   |   |
+| 500  | o | o | x | x | x |  | o | o |   |   |   |  | o | o | o |   |   |  | o | o | o |   |   |
+
+![](./img/소유권img/6.png)
+
+<br>
+
+![정의](./img/소유권img/5.png)
+
+<br>
+
+![정의](./img/소유권img/7.png)
+
+# 🔐 권한 분석 실습 정리
+
+## 📌 기본 상황 정리
+
+- 로그인 계정: `samadal`
+- 홈 디렉토리: `/export/home/samadal` → **1,2번 권한은 항상 `o` (접근 가능)**
+- 우리가 권한을 바꾼 경로:  
+  - `/export/home/samadal/html`  
+  - `/var/www/html`
+
+---
+
+## ✅ 권한에 따른 조건 설명
+
+1. **html 디렉토리로 경로 변경 가능?**  
+   → `ftp 접속자`의 **x 권한** 필요  
+   > 디렉토리의 x 권한은 디렉토리로의 이동 및 접근 가능 여부를 결정함.
+
+2. **파일 업로드 가능?**  
+   → `ftp 접속자`의 **w 권한**
+
+3. **웹 사이트 출력 가능?**  
+   → `other`의 **x 권한** 필요
+
+---
+
+## 🧩 UID / GID 기준 분석
+
+### 📂 Case 1: `root : root`
+
+- `samadal`은 **other**가 됨
+- → `--- --- ---` 중 `other`(o)의 권한만 보면 됨
+
+| other 권한 | 끝나는 숫자 | 허용 기능 개수 |
+|------------|-------------|----------------|
+| `rwx`, `-wx` | 3, 7       | 5개 가능       |
+| `--x`, `r-x` | 1, 5       | 3개 가능       |
+| `---`, `-w-`, `r--`, `rw-` | 0, 2, 4, 6 | 2개 가능       |
+
+---
+
+### 📂 Case 2: `root : samadal`
+
+- `samadal`은 **group**이 됨
+- → `group`의 `w`, `x` 와 `other`의 `x`를 확인해야 함
+
+| group 숫자 | other 숫자 | 허용 기능 개수 | 조합 예시 |
+|-------------|-------------|----------------|------------|
+| 3, 7         | 1, 3, 5, 7   | 5개           | `-31`, `-33`, `-35`, `-37`, `-71`, `-73`, `-75`, `-77` |
+| 3, 7         | 0, 2, 4, 6   | 4개           | — |
+| 1, 5         | —            | 3개 (x만 있음) | — |
+| 기타         | —            | 2개 이하      | — |
+
+---
+
+### 📂 Case 3: `samadal : root`
+
+- `samadal`은 **owner**가 됨
+- → `--- --- ---` 중 `user (u)`와 `other (o)` 권한을 모두 봐야 함
+
 
