--- a/linux/3. 방화벽관리.md
+++ b/linux/3. 방화벽관리.md
@@ -43,7 +43,27 @@
 - `--reload` 명령어로 **적용 필수**
 
 ---
+## 🔧 포트 및 서비스 추가 실습 (CentOS 방화벽 설정)
+![CentOS](./img/방화벽관리img/5.png)
+---
+
 ![CentOS](./img/방화벽관리img/2.png)
+```
+firewall-cmd --reload  #까먹지 말 것 
+```
+
+---
+![CentOS](./img/방화벽관리img/6.png)
+---
+## ✅ 한번에 추가하는 방법<br>
+```
+vi /etc/firewalld/zones/public.xml #파일 수정정
+```
+![CentOS](./img/방화벽관리img/7.png)
+---
+![CentOS](./img/방화벽관리img/8.png)
+
+
 ## 💡 요약 비교
 
 | 구분       | Ubuntu (ufw)           | CentOS (firewalld)                    |
