파티션 및 마운트

--- a/linux/6.파티션.md
+++ b/linux/6.파티션.md
@@ -95,7 +95,11 @@ Disk /dev/sda2는 시스템 HDD이며, Disk /dev/sdb는 새로 추가한 HDD
 ## 🧱 step 3. 파티션(File System) 설정(Fdisk)하기
 ![디스크확인](./img/파티션img/6.png)
 ---
-p: 파티션확인 n 새로운 파티션 추가 d 파티션지우기 w저장하고 나가기 q 저장하지 않고 나가기
+- p: 파티션확인 <br>
+- n 새로운 파티션 추가 <br>
+- d 파티션지우기 <br>
+- w저장하고 나가기 <br> 
+- q 저장하지 않고 나가기
 ![디스크확인](./img/파티션img/7.png)
 ---
 생성 후 확인
@@ -137,57 +141,27 @@ sudo umount /디렉터리 <-- 마운트 해제 명령어(마운트 걸린 디렉
 리눅스에서는 마운트하지 않으면 디바이스는 존재만 하고 접근이 불가능
 
 ## ⚙️ 보너스: 자동 마운트 설정 (fstab)
+시스템 부팅 시마다 자동 마운트를 위해 설정
 
-시스템 부팅 시마다 **자동으로 마운트**되도록 설정하는 과정
+파일 열기: sudo vi /etc/fstab
 
----
+가장 아래에 한 줄 추가:
 
-### ✅ 1. fstab 파일 수정
+예시: /dev/sdb1 /mnt/mydisk ext4 defaults 0 2
 
-- 설정 파일 열기  
-  `sudo vi /etc/fstab`
+저장 후 종료 (Ctrl + O, Enter, Ctrl + X)
 
-- 가장 아래에 한 줄 추가
+적용 테스트 (재부팅 없이):
+sudo mount -a → 에러 없으면 성공
 
-  예시:  
-  `/dev/sdb1  /mnt/mydisk  ext4  defaults  0  2`
+![디스크확인](./img/파티션img/12.png)
 
-- 저장 후 종료 (vi 기준)  
-  → `Esc` → `:wq`
-
----
-
-### ✅ 2. 적용 테스트 (재부팅 없이)
+![디스크확인](./img/파티션img/13.png)
 
 ```
 sudo mount -a
-```
-
-- 에러가 없다면 설정 성공
-
----
-
-### ✅ 3. autofs 설치 (옵션)
-
-- autofs는 동적으로 자동 마운트하는 도구  
-- 종료 후에도 자동 마운트를 확실히 하고 싶을 때 사용
-
-```bash
 sudo apt install autofs
 ```
 
----
-
-### ✅ 4. 시각적 확인
-
-- fstab 파일 수정 화면  
-  ![디스크확인](./img/파티션img/12.png)
-
-- mount 명령 적용 확인  
-  ![디스크확인](./img/파티션img/13.png)
-
-- autofs 설치 후 자동 마운트 적용  
-  ![디스크확인](./img/파티션img/14.png)
-
----
- 
+![디스크확인](./img/파티션img/14.png)
+이러면 종료 후 다시 재 실행 해도 자동 마운트 
