--- a/linux/10.DHCP.md
+++ b/linux/10.DHCP.md
@@ -89,11 +89,11 @@ subnet 192.168.10.0 netmask 255.255.255.0 {
 systemctl restart dhcpd
 ```
 ## Vmware 설정
-- 외부에서 받아오는 DHCP를 해제 해준다.
+- 외부에서 받아오는 DHCP를 해제 해준다.<br>
 ![DHCP해제](./img/DHCPimg/5.png)
 
 - CentOS와 Window10 모두 NAT로 설정<br>
-- Window10 에서 cmd창 열기
+- Window10 에서 cmd창 열기<br>
 ![DHCP해제](./img/DHCPimg/6.png)
 
 ```
