--- a/linux/11.Kali Linux 2024.3.md
+++ b/linux/11.Kali Linux 2024.3.md
@@ -117,7 +117,14 @@ sudo service ssh restart
 ```
 sudo apt install ufw
 ```
+<br>
 
+만약에 업데이트 안될시
+```
+sudo apt-get update
+sudo apt-get upgrade
+sydo apt-get install -y ssh
+```
 ```
 sudo ufw allow 20/tcp && ufw allow 21/tcp && ufw allow 22/tcp && ufw allow 80/tcp
 ```
@@ -130,3 +137,4 @@ sudo ufw reload
 <br>
 
 ![네트워크 설정1](./img/칼리img/17.png)
+
