--- a/NetWork/네트워크 해킹 절차.md
+++ b/NetWork/네트워크 해킹 절차.md
@@ -10,3 +10,37 @@
         → ICMP로 확인 가능 (외부망 WAN)
         - 라우터 안에 있는 경우<br>
         → ARP로 확인 가능 (내부망 LAN)
+---
+
+## 2. 실습 환경 구성
+- SRV100 (Windows Server 2022)
+- Client100 (CentOS 7.9.2207)
+- SRV200 (Windows Server 2022)
+- Client200 (Windows Server 2022)
+---
+
+1. 센토스 와이어샤크 다운로드<br>
+![샤크](./img/해킹img/1.png)
+2. IP설정 및 데몬 재실행<br>
+![IP](./img/해킹img/2.png)
+```
+systemctl restart network
+```
+---
+
+## 3. 테스트
+
+- 로컬 테스트 <br>
+    - LAN 구간에서의 통신
+        → SRV100 내부망에서 Client100으로 ping 명령 때린 후 Client100에서 샥스핀으로 확인
+    - 샥스핀 패키지를 설치하면 '프로그램' 메뉴 하단에 있는 '인터넷'에 자동적으로 'Wiresharek Network Analyzer'로 등록되어 있다.<br>
+    ![Wireshark](./img/해킹img/3.png)
+    - 결과<br>
+    ```
+    192.168.100.10	192.168.100.20	ICMP	74	Echo (ping) request  ttl=128 
+    192.168.100.20	192.168.100.10	ICMP	74	Echo (ping) reply ttl=64 (request in 1) 
+    
+    Vmware_aa:72:53	Vmware_21:d6:57	ARP	60	Who has 192.168.100.20?  Tell 192.168.100.10 
+    Vmware_21:d6:57	Vmware_aa:72:53	ARP	42	192.168.100.20 is at 00:0c:29:21:d6:57
+    ```
+- 원격 테스트 <br>
