와이어샤크

--- a/NetWork/네트워크 해킹 절차.md
+++ b/NetWork/네트워크 해킹 절차.md
@@ -142,3 +142,155 @@ f9:99:37          192.168.200.20
 
 ---
 ### 원격 테스트 <br>
+
+## 4. 네트워크 해킹 절차 및 정보수집 관련 명령어
+
+- ping 
+    - 개요<br>
+        → 침투 테스트 범위에 있는 IP주소를 목록화하고 현재 동작중인 시스템을 확인한다. <br>
+        → 보안상 문제(신뢰성)가 있고 IP로의 공격 범위를 제공하기 때문에 차단하는 것이 좋다. <br>
+        → (핵심)가장 큰 문제는 시스템의 네트워크에 과부하를 초래할 수가 있다. <br>
+    
+    - 사용되는 패킷
+        → ICMP <br>
+        → echo **Request(요청)** Packet <br>
+            : Linux/Unix (64byte), Windows(32byte/128byte) <br>
+        → echo **Response(응답)** Packet <br>
+            : Linux/Unix (64byte), Windows(32byte/128byte) <br>
+        → 특징 <br>
+        : ping 명령을 실행한 후 출력되는 내용은 모두 'Response(응답)' 내용을 보여주고 있다. <br>
+        : 출력되는 내용 중에  'TTL'이 'echo Respose(응답) Packet (TTL)'에서 언급한 내용과 다른 값을 보여주는데 이는 해당 대역에 있는 'Gateway' 주소가 빠진 값을 보여주고 있는 것이다. <br>
+---
+
+## 실습 1. 대응 방안 (Hhost OS에서 작업한다.)
+
+- 개요<br>
+: 'wf.msc'에서 '규칙 사용'을 해제한다. <br>
+→ 시스템의 네트워크에 과부화를 초래할 수 가 있다. <br>
+: 작업 환경 설정
+-> CentOS 7.9
+: ping 요청 시 응답 가능 여부 <br>
+
+
+→ 가능<br>
+![ping1](./img/해킹img/6.png)
+```
+echo 0 > /proc/sys/net/ipv4/icmp_echo_ignore_all
+```
+
+
+→ 불가능<br>
+![ping2](./img/해킹img/7.png)
+
+```
+echo 1 > /proc/sys/net/ipv4/icmp_echo_ignore_all
+```
+---
+
+## 실습 2. 'Echo Packet'
+### 작업 환경 설정 (NAT) <br>
+- kali <br>
+- Windows 10
+
+### 테스트 1. 'echo Request'와 'echo Response' 패킷 확인<br>
+: 'Kali'에서 'Windows 10' 으로 ping 명령을 실행 <br>
+: 결론 <br>
+- 송신부는 Linux(kali)이기 때문에 '64'가 수신부는 'Windows'이기 때문에 '128'이 확인된다.
+
+![kali](./img/해킹img/8.png)
+---
+
+### 테스트 2. 'echo Request'와 'echo Response' 패킷 확인<br>
+- 'Windows 10'에서 'kali'로 ping 명령을 실행 <br>
+
+![kali](./img/해킹img/9.png) <br>
+- 송신부는 'Windows'이기 때문에 '128', 수신부는 'Linux(kali)'이기 때문에 '64'가 확인된다.
+
+---
+
+## traceroute
+
+### 개요
+
+- 네트워크 정보를 확인하는 명령어이다.
+- 목적지로 가는 동안에 거치는 라우터를 기록한다.
+- Windows에서는 'tracert'를 사용한다.
+```    
+실습 환경
+CentOS 132
+Kali 134
+Window 130
+```
+```
+traceroute www.gusiya.com
+
+traceroute to www.gusiya.com (192.168.10.132), 30 hops max, 60 byte packets
+ 1  _gateway (192.168.10.132)  0.546 ms !X  0.511 ms !X  0.477 ms !X
+```
+
+---
+
+## arping 
+
+### 개요
+- ARP 패킷을 이용한 살아있는 호스트(Live)를 식별한다.
+- OSI 7 Layer의 3계층 이하에서만 동작한다.
+- 로컬 네트워크에 있는 시스템끼리만 통신이 가능하다.
+
+## 실습
+
+```
+도메인 테스트
+[samadal@kali ~]$sudo arping -c 3 www.gusiya.com
+ARPING 192.168.10.132
+60 bytes from 00:0c:29:71:5a:f5 (192.168.10.132): index=0 time=185.462 usec
+60 bytes from 00:0c:29:71:5a:f5 (192.168.10.132): index=1 time=264.226 usec
+60 bytes from 00:0c:29:71:5a:f5 (192.168.10.132): index=2 time=253.620 usec
+
+--- 192.168.10.132 statistics ---
+3 packets transmitted, 3 packets received,   0% unanswered (0 extra)
+rtt min/avg/max/std-dev = 0.185/0.234/0.264/0.035 ms
+```
+
+```
+IP주소로 테스트
+[samadal@kali ~]$sudo arping -c 3 192.168.10.132
+ARPING 192.168.10.132
+60 bytes from 00:0c:29:71:5a:f5 (192.168.10.132): index=0 time=320.252 usec
+60 bytes from 00:0c:29:71:5a:f5 (192.168.10.132): index=1 time=197.402 usec
+60 bytes from 00:0c:29:71:5a:f5 (192.168.10.132): index=2 time=192.017 usec
+
+--- 192.168.10.132 statistics ---
+3 packets transmitted, 3 packets received,   0% unanswered (0 extra)
+rtt min/avg/max/std-dev = 0.192/0.237/0.320/0.059 ms
+```
+
+> 맥주소가 노출되기 때문에 상당히 **위험하다**
+
+특징
+
+- **ARP Requiest**를 **Broadcating** 하기 위해 시도한다.
+- > (중요) 'ARP Address (MAC Address)'가 노출된다.
+- 해당 호스트가 'Live'상태라는 것을 아렬주고 있다.
+
+---
+
+## netenum
+
+### 개요
+- 특정 IP주소의 대역 안에 있는 모든 시스템에 ping 패킷을 보낸 후 활성화 된 시스템을 확인한다.
+- '**ICMP ehco Request**' 패킷을 보낸후 **ICMP echo Response** 패킷을 받아서 IP주소들을 출력해준다.
+```
+sudo netenum 192.168.10.0/24 3 0
+```
+
+| No. | Time     | Source         | Destination    | Protocol | Length | Info                                                                 |
+|-----|----------|----------------|----------------|----------|--------|----------------------------------------------------------------------|
+| 162 | 1.356367 | 192.168.10.134 | 192.168.10.130 | ICMP     | 98     | 🟢 Request from **Kali (64 TTL)** to **Windows** (Reply in 163)     |
+| 163 | 1.356565 | 192.168.10.130 | 192.168.10.134 | ICMP     | 98     | 🔵 Reply from **Windows (128 TTL)** to **Kali**                      |
+| 168 | 1.377147 | 192.168.10.134 | 192.168.10.132 | ICMP     | 98     | 🟢 Request from **Kali (64 TTL)** to **CentOS** (Reply in 169)      |
+| 169 | 1.377305 | 192.168.10.132 | 192.168.10.134 | ICMP     | 98     | 🔵 Reply from **CentOS (64 TTL)** to **Kali**                        |
+
+![kali](./img/해킹img/10.png) <br>
+
+---
