--- a/NetWork/스푸핑.md
+++ b/NetWork/스푸핑.md
@@ -9,7 +9,7 @@
 - IP주소와 해당 주소에 대한 MAC Address 목록을 말한다.
 - 'cmd'창에서 'arp -a' 를 통해서 확인할 수 있다.
 
-## 실습 1. 기본 실습
+## 실습 1. 기본 실습 (IP를 이용한 공격)
 ### 🖥️ 실습 환경(NAT)
 ```
 - Attacker(Kali)        192.168.10.134 / c / 192.168.10.2 / 192.168.10.2
@@ -68,3 +68,17 @@ G/W             (192.168.10.2)   / 00:0c:29:b2:04:58
 
 ## 결론
 - 공격을 하고 있는 동안만 MAC Address가 변경된다.
+
+## 실습 2. 응용 실습 (도메인을 이용한 공격)
+
+### 개요
+- CentOS에서 DNS서버와 Web 서버를 구축한다.
+- Kali에서 ARP Spoofing 공격을 시도한다.
+- Window 10에서 사이트 출력을 확인하고 변조된 것을 확인한다.
+
+### 🖥️ 실습 환경(NAT)
+```
+- Attacker(Kali)        192.168.10.134 / c / 192.168.10.2 / 192.168.10.132
+- Victim(CentOS)        192.168.10.132 / c / 192.168.10.2 / 192.168.10.132
+- 확인(Windows 10)       192.168.10.130 / c / 192.168.10.2 / 192.168.10.132
+``` 
