--- a/NetWork/스푸핑.md
+++ b/NetWork/스푸핑.md
@@ -82,3 +82,49 @@ G/W             (192.168.10.2)   / 00:0c:29:b2:04:58
 - Victim(CentOS)        192.168.10.132 / c / 192.168.10.2 / 192.168.10.132
 - 확인(Windows 10)       192.168.10.130 / c / 192.168.10.2 / 192.168.10.132
 ``` 
+
+### Step 1. 3개의 시스템에 IP를 설정
+
+### Step 2. CentOS에서 'Kali'에 호스트 부여
+
+### Step 3. windows 10에서 네임서버 조회를 하고 'MAC Address'로 확인한다.
+
+![후](./img/스푸핑img/3.png)
+
+### Step 4. Windows 10에서 '사이트(www.gusiya.com)'를 출력한다.
+
+![후](./img/스푸핑img/4.png)
+
+
+### Step 5. 'kali'에서 시스템 재구성
+
+- Apache2 패키지 설치, 방화벽 추가 후 활성화
+- 사이트 출력 <br>
+![후](./img/스푸핑img/5.png)
+
+### Step 6. 'Kali' 에서 'DNS Spoofing'으로 두 시스템에 공격을 실행한다.
+```
+sudo arpspoof -i eth0 -t 192.168.10.130 192.168.10.2
+```
+- windows 10<br>
+
+![후](./img/스푸핑img/6.png)
+
+→ 모두 정상적으로 출력이 된다.<br>
+
+→ 그 이유는 **'windows 10'** 단지 사이트를 출력만 하고 있기 때문에 실제 공격을 받았지만 사이트는 아무런 영향을 받지 않는다.<br>
+
+```
+sudo arpspoof -i eth0 -t 192.168.10.132 192.168.10.2
+```
+![후](./img/스푸핑img/7.png) <br>
+이것도 변화가 없다. <br>
+
+![센토스](./img/스푸핑img/8.png) <br>
+```
+현재 arp -a 출력에서 확인된 사항
+192.168.10.2 (gateway) 와 192.168.10.134 (attack.gusiya.com)이 동일한 MAC 주소 (00:0c:29:b2:04:58) 를 가짐.
+
+이는 일반적으로 ARP 스푸핑(위조) 또는 ARP 포이즈닝 공격의 징후입니다.
+```
+변화
