--- a/linux/NGINX/01.배포판 설치 센트.md
+++ b/linux/NGINX/01.배포판 설치 센트.md
@@ -1,9 +1,24 @@
-# 📘 NGINX 리눅스 배포판에 설치하기
+# 📘 1.2 NGINX 리눅스 배포판에 설치하기
 
 ## etc/yum/repos.d/nginx.repo 파일 생성
 ```
+[nginx]
 name=nginx repo
 baseurl=http://nginx.org/packages/centos/$releasever/$basearch/
 gpgcheck=0
 enabled=1
 ```
+
+## 패키지 설치
+
+```
+yum -y install nginx
+systemctl enable nginx
+systemctl start nginx
+firewall-cmd --permanent --zone=public --add-port=80/tcp
+firewall-cmd --reload
+```
+
+## 1.3 엔진엑스 플러스 설치하기
+
+### 설치 방법은 웹사이트(https://oreil.ly/U97s8)에서 제공
