--- a/linux/NGINX/01.배포판 설치 센트.md
+++ b/linux/NGINX/01.배포판 설치 센트.md
@@ -21,4 +21,36 @@ firewall-cmd --reload
 
 ## 1.3 엔진엑스 플러스 설치하기
 
-### 설치 방법은 웹사이트(https://oreil.ly/U97s8)에서 제공
+### 설치 방법은 웹사이트(https://oreil.ly/U97s8)에서 제공 -안함-
+
+### 1.4 설치 상태 점검
+
+```
+nginx -v
+nginx version: nginx/1.26.1
+```
+설치된 엔진엑스가 동작하는지 확인
+```
+ps -ef | grep nginx
+```
+
+### 엔진엑스 주요 설정 파일과 디렉터리
+
+## /etc/nginx 
+- 엔진엑스 서버가 사용하는 기본 설정이 저장된 루트 디렉터리
+- 엔진엑스는 이곳에서 저장된 설정파일의 내용에 따라 동작
+
+## /etc/nginx/nginx.conf
+- 엔진엑스의 기본 설정 파일로, 모든 설정에 대한 진입점
+- 워커프로세스 개수, 튜닝, 동적 모듈 적재와 같은 글로벌 설정 항목을 포함하며, 다른 엔진엑스 세부 설정 파일에 대한 참조를 지정
+- 설명할 디렉터리에 위치한 모든 설정 파일을 포함하는 최상위 http 블록을 소유
+
+### /etc/nginx/conf.d/
+- 기본 HTTP 서버 설정 파일을 포함
+- 디렉터리 내 파일 중 이름이 .conf 로 끝나는 파일은 /etc/nginx/nginx.conf 파일이 가진 최상위 http 블록에 포함
+- 엔진엑스 설정은 **include** 구문을 활용해 구조화함으로써 각 설정 파일을 간결하게 유지하면 좋음
+
+### /var/log/nginx/
+- 엔진엑스의 로그가 저장되는 디렉터리, access.log와 eroor.log 파일이 있음.
+- 기본적으로 접근 로그 파일은 엔진엑스 서버가 수신한 개별 요청에 대한 로그를 저장
+- 오류 로그 파일은 오류 발생 시 이벤트 내용을 저장
