--- a/linux/13.Crontab.md
+++ b/linux/13.Crontab.md
@@ -164,7 +164,162 @@ date의 특수기능
 ```
 0 2,14 * * * 
 ```
+<br>
+
 
 매일 새벽 4시 30분에 데이터 베이스 파일을 백업하고 백업한 내용을 확인하고 확인한 목록을 파일로 저장
 
 로컬 시스템에 있는 db 백업본을 원격지에 있는 백업서버로 백업하는 방법
+
+- scp를 이용한 방법
+    - 로컬 시스템(Private key)과 백업 시스템(public key)에 SSH 보안 설정을 한다.
+    - DB Backup
+    ```
+    mysqldump -uroot -ppwroot mysql > /export/home/samadal/db.sql
+    ```
+    - SSH 전송
+    - scp /export/home/samadal/db.sql samadal@백업서버IP/home/samadal
+
+MariaDB를 이용한 방법
+- 원격지에 있는 DB 서버에 접근
+```
+mysql -h DB서버IP -uroot -p mysql
+MariaDB(DB서버)> 
+```
+이 방법은 원격에 있는 DB에 접근 후 설정 작업을 하는 용도로 밖에 사용할 수가 없다. 즉, SSH를 이용한 백업을 할 수가 없다.
+
+## RSA 공개키
+
+1. without keyGen
+
+: Server에서의 작업(접속을 허용하는 놈, 192.168.10.132)<br>
+
+- 공개키가 저장될 디렉터리 생성
+![](./img/Crontabimg/2.png)
+
+- SSH 환경설정
+```
+vi /etc/ssh/sshd_config
+```
+
+![](./img/Crontabimg/3.png)
+
+```
+systemctl restart sshd
+```
+
+
+: Client에서의 작업(접속을 하는 놈, 192.168.10.137)
+
+- 공개키와 개인키 생성
+```
+ssh-keygen -t rsa
+```
+![](./img/Crontabimg/4.png)
+
+- 생성된 공개키를 Server에 전송
+
+65번 yes로 수정
+```
+PermitEmptyPasswords no
+65번 PasswordAuthentication yes
+```
+```
+[samadal@localhost .ssh]$ scp id_rsa.pub samadal@192.168.10.132:/export/home/samadal/.ssh/authorized_keys
+samadal@192.168.10.132's password:
+Permission denied, please try again.
+samadal@192.168.10.132's password:
+Permission denied, please try again.
+samadal@192.168.10.132's password:
+id_rsa.pub                                                                                      100%  411   713.7KB/s   00:00
+[samadal@localhost .ssh]$
+
+```
+![](./img/Crontabimg/5.png)
+![](./img/Crontabimg/6.png)
+
+
+## with keyGen
+
+키 생성(Host OS)
+
+![](./img/Crontabimg/7.png)
+<br>
+![](./img/Crontabimg/8.png)
+<br>
+![](./img/Crontabimg/9.png)
+
+공용키 전송
+
+pwd: /export/home/samadal/.ssh
+```
+vi authorized_keys
+```
+![](./img/Crontabimg/10.png)
+<br>
+
+![](./img/Crontabimg/11.png)
+<br>
+서버에서 확인
+![](./img/Crontabimg/12.png)
+<br>
+![](./img/Crontabimg/13.png)
+<br>
+![](./img/Crontabimg/14.png)
+<br>
+다시 65번 no 
+![](./img/Crontabimg/15.png)
+<br>
+![](./img/Crontabimg/16.png)
+600으로 수정
+authorized_keys
+<br>
+![](./img/Crontabimg/17.png)
+<br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+## 실습 2. 응용
+예제 1. 다음의 조건으로 작업한다.
+'132번' 시스템에서 CD-ROM을 마운트 한 후 mariadb로 시작하는 모든 패키지를 /cloud 디렉터리에 복사한다.
+
+'137번' 시스템의 '/home/samadal/mariadb.tar.gz'라는 파일로 복사할 것 <br>
+이 작업은 매일 새벽 5시 30분에 실행되도록 한다.<br>
+모든 작업은 'Shell Scripting' 으로 설정한다.
+
+![](./img/Crontabimg/1.png)
+
+132<br>
+
+mkdir /cloud
+```
+cd /export/home/samadal
+
+vi mariadb.sh
+```
+```
+!#/bin/bash
+
+cp -p mariadb*.rpm /cloud
+```
