--- a/linux/NGINX/01.배포판 설치 센트.md
+++ b/linux/NGINX/01.배포판 설치 센트.md
@@ -1,6 +1,6 @@
 # 📘 1.2 NGINX 리눅스 배포판에 설치하기
 
-## etc/yum/repos.d/nginx.repo 파일 생성
+## etc/yum.repos.d/nginx.repo 파일 생성
 ```
 [nginx]
 name=nginx repo
