--- a/linux/NGINX/01.배포판 설치 센트.md
+++ b/linux/NGINX/01.배포판 설치 센트.md
@@ -34,6 +34,42 @@ nginx version: nginx/1.26.1
 ps -ef | grep nginx
 ```
 
+
+## 최신 버전 레포지토리 추가
+```
+[nginx-mainline]
+name=nginx mainline repo
+baseurl=http://nginx.org/packages/mainline/centos/7/$basearch/
+gpgcheck=1
+enabled=1
+gpgkey=https://nginx.org/keys/nginx_signing.key
+```
+
+## nginx 재설치, 업데이트 및 서비스 기동
+### 기존 nginx 제거
+```
+sudo yum remove -y nginx nginx-all-modules nginx-mod-*
+```
+
+### 새로 설치/업데이트
+```
+sudo yum clean all
+sudo yum makecache
+sudo yum install -y nginx
+```
+### 서비스 등록 및 시작
+```
+sudo systemctl enable nginx
+sudo systemctl start nginx
+```
+### 구동 확인
+```
+nginx -v
+```
+
+
+
+
 ### 엔진엑스 주요 설정 파일과 디렉터리
 
 ## /etc/nginx 
