--- a/linux/NGINX/02.include 구문.md
+++ b/linux/NGINX/02.include 구문.md
@@ -5,6 +5,8 @@
 include 지시자를 사용해 참조할 개별 설정 파일, 디렉터리 혹은 여러 파일 및 디렉터리에 대한 마스크를 지정하고 참조
 
 ```
+pwd = /etc/nginx/nginx.conf
+
 http {
         include config.d/compression.cof;
         include sites-enabled/*.conf
