--- a/ANsible/20250519Vagrant.md
+++ b/ANsible/20250519Vagrant.md
@@ -34,6 +34,49 @@
 - 다시 하단에 있는 '가상 머신' 탭을 클릭한 후 'Host key Combo' 옆에 있는 'Right Control' 옆에 있는 지우개를 클릭한다.
 - 왼쪽의 빈 공간을 클릭한 후 'ctrl + Alt'를 동시에 누르면 된다.
 
+![](./img/20250519/0013.png)
+
+![](./img/20250519/0014.png)
+
+![](./img/20250519/0015.png)
+
+![](./img/20250519/0016.png)
+
+CentOS 설치 방법대로 설치
+
+## 네트워크 설정
+
+- 1대의 시스템만 사용 (한 개의 네트워크 어뎁터만 필요)
+
+- 여러 대의 시스템 사용 (두 개의 네트워크 어뎁터가 필요)
+
+![](./img/20250519/0017.png)
+
+![](./img/20250519/0018.png)
+
+![](./img/20250519/0019.png)
+
+![](./img/20250519/0020.png)
+
+##### 어댑터 1
+
+호스트 전용 어댑터로 모두 허용으로 변경<br>
+
+![](./img/20250519/0021.png)
+
+다시 NAT로 변경<br>
+
+![](./img/20250519/0022.png)
+
+##### 어댑터 2 
+
+![](./img/20250519/0023.png)
+
+![](./img/20250519/0024.png)
+
+![](./img/20250519/0025.png)
+
+## 원격 접속
 
 
 
@@ -41,12 +84,6 @@
 
 
 
-
-
-
-
-
----
 
 ## 3. Provisioning 하기
 ### 개요
@@ -100,3 +137,73 @@
 - 왜? 가상 OS를 가상 OS안에 설치할 수가 없기 때문이다.
 
 - 실행 1. 
+
+오류
+
+![](./img/20250519/0026.png)
+
+정상
+
+![](./img/20250519/0027.png)
+
+![](./img/20250519/0028.png)
+
+![](./img/20250519/0029.png)
+
+
+```
+C:\HashiCorp>Vagrant up
+Bringing machine 'default' up with 'virtualbox' provider...
+==> default: Box 'centos/7' could not be found. Attempting to find and install...
+    default: Box Provider: virtualbox
+    default: Box Version: >= 0
+==> default: Loading metadata for box 'centos/7'
+    default: URL: https://vagrantcloud.com/api/v2/vagrant/centos/7
+==> default: Adding box 'centos/7' (v2004.01) for provider: virtualbox
+    default: Downloading: https://vagrantcloud.com/centos/boxes/7/versions/2004.01/providers/virtualbox/unknown/vagrant.box
+    default:
+    default: Calculating and comparing box checksum...
+==> default: Successfully added box 'centos/7' (v2004.01) for 'virtualbox'!
+==> default: Importing base box 'centos/7'...
+==> default: Matching MAC address for NAT networking...
+==> default: Checking if box 'centos/7' version '2004.01' is up to date...
+==> default: Setting the name of the VM: HashiCorp_default_1747641791946_75548
+==> default: Clearing any previously set network interfaces...
+==> default: Preparing network interfaces based on configuration...
+    default: Adapter 1: nat
+==> default: Forwarding ports...
+    default: 22 (guest) => 2222 (host) (adapter 1)
+==> default: Booting VM...
+==> default: Waiting for machine to boot. This may take a few minutes...
+    default: SSH address: 127.0.0.1:2222
+    default: SSH username: vagrant
+    default: SSH auth method: private key
+    default:
+    default: Vagrant insecure key detected. Vagrant will automatically replace
+    default: this with a newly generated keypair for better security.
+    default:
+    default: Inserting generated public key within guest...
+    default: Removing insecure key from the guest if it's present...
+    default: Key inserted! Disconnecting and reconnecting using new SSH key...
+==> default: Machine booted and ready!
+==> default: Checking for guest additions in VM...
+    default: No guest additions were detected on the base box for this VM! Guest
+    default: additions are required for forwarded ports, shared folders, host only
+    default: networking, and more. If SSH fails on this machine, please install
+    default: the guest additions and repackage the box to continue.
+    default:
+    default: This is not an error message; everything may continue to work properly,
+    default: in which case you may ignore this message.
+==> default: Rsyncing folder: /cygdrive/c/HashiCorp/ => /vagrant
+```
+
+### 확인 사항
+
+- **virtualBox** 에서 확인
+- **Vagrant** 명령어로 확인
+
+### 가상머신 삭제
+
+![](./img/20250519/0030.png)
+
+종료 후 삭제
