--- a/ANsible/20250519Vagrant.md
+++ b/ANsible/20250519Vagrant.md
@@ -114,8 +114,8 @@ CentOS 설치 방법대로 설치
 ### ✅ `vagrant ssh`
 - 가상 머신에 **SSH로 접속**한다.
 
-### ✅ `vagrant provision`
-- 변경된 설정을 가상 머신에 **재적용(프로비저닝)**한다.
+### ✅ `vagrant provision` 비추
+- 변경된 설정을 가상 머신에 **재적용(프로비저닝)** 한다.
 
 ## 스크립트 생성
 ### `vagrant init`
@@ -207,3 +207,48 @@ Bringing machine 'default' up with 'virtualbox' provider...
 ![](./img/20250519/0030.png)
 
 종료 후 삭제
+
+## 4. Ansible Controller 서버에 실행 환경 구성 
+
+### 서버 환경 구성 1. Vagrant Provisioning without Vagrantfile 
+[소스 코드 및 명령어 참고 사이트](https://portal.cloud.hashicorp.com/vagrant/discover?query=)
+![](./img/20250519/0031.png)
+
+![](./img/20250519/0032.png)
+
+방법
+
+![](./img/20250519/0033.png)
+
+버전
+
+>Official Ubuntu 18.04 LTS (Bionic Beaver) builds 
+
+
+#### 프로비저닝(가상 머신 생성)
+
+![](./img/20250519/0034.png)
+
+```
+vagrant init ubuntu/bionic64 --box-version 20230607.0.5
+```
+
+![](./img/20250519/0035.png)
+```
+vagrant up
+```
+![](./img/20250519/0036.png)
+
+![](./img/20250519/0037.png)
+
+```
+sudo apt update
+sudo apt upgrade
+ifconfig
+```
+![](./img/20250519/0038.png)
+
+```
+sudo reboot
+sudo do-release-upgrade
+```
